--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 
 body {
   margin: 0;
@@ -41,6 +46,7 @@ code {
   }
   
 
+  
   /* Add any additional styles needed for smaller screens */
 }
 
